styles/main.sass
*
  box-sizing: border-box

@import "../bower_components/normalize-css/normalize.css"
@import "fonts.css"
@import "variables"
@import "icons"
@import "globals"

@import "header"
@import "graphic"

#content
  background: url('../images/landtagswahl-bg.jpg') fixed
  background-size: cover

  > .container
    padding: 50px 30px 0 30px
    margin: 0 auto
    background: white

.category
  max-width: $max-width
  margin: 0 auto
  overflow: hidden

  a
    display: block
    text-decoration: none
    padding: 10px 0
    margin: 30px 0 20px 0
    color: white
    font-weight: bold
    font-size: 20px

    &:hover
      text-decoration: underline

.intro
  max-width: $max-width * 0.5
  text-align: center
  margin: 0 auto 80px auto

  h1
    font-size: 35px

  p
    line-height: 1.6

.question
  h2, h3
    max-width: $max-width * 0.8
    margin: 10px auto
    text-align: center

  h2
    font-size: 24px

  .result
    visibility: hidden
    position: relative
    margin-bottom: 70px

    .actionContainer
      position: absolute
      left: 0
      right: 0

      button
        display: block
        margin: 20px auto
        padding: 10px 15px
        border: none
        background: $wdr-blue
        color: white
        font-size: 20px
        cursor: pointer
        outline: none

      .tooltipcontainer
        left: 50%
        position: absolute
        opacity: 0
        padding-top: 7px

        .tooltiptext
          position: relative
          background-color: #555
          color: #fff
          text-align: center
          border-radius: 6px
          padding: 8px 12px
          z-index: 1
          left: -50%
          transition: opacity 1s

    .text
      max-width: $max-width * 0.5
      margin: 10px auto
      visibility: hidden
      text-align: center
      font-size: 20px

      p
        line-height: 1.5

      a
        display: block
        text-align: left
        padding-left: 20px
        padding-bottom: 5px
        border-left: 2px solid black

        &:first-of-type
          margin-top: 30px

  .tooltiptext::after
    	bottom: 100%
    	left: 50%
    	border: solid transparent
    	content: " "
    	height: 0
    	width: 0
    	position: absolute
    	pointer-events: none
    	border-color: rgba(136, 183, 213, 0)
    	border-bottom-color: #555
    	border-width: 15px
    	margin-left: -15px

  .showAction:hover + .tooltipcontainer
      opacity: 1

@media (max-width: $bp-md)
  .container
    padding-left: 10px
    padding-right: 10px

